<resources>
    <string name="app_name">Dicoding Events</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Settings</string>
    <string name="title_upcoming_event">Upcoming</string>
    <string name="title_finished_event">Finished</string>
    <string name="title_bookmarked_event">Bookmarked</string>

    <string name="label_home">Dicoding Events</string>
    <string name="label_upcoming">Upcoming Events</string>
    <string name="label_finished">Finished Events</string>
    <string name="label_bookmarked_events">Bookmarked Events</string>

    <string name="header_upcoming_event">Upcoming Event</string>

    <string name="finished_event_title">Finished Event</string>
    <string name="sub_header_finished_event">These Events are Finished, Check our Upcoming Events</string>

    <string name="event_location">Location</string>
    <string name="event_start">Event Start</string>
    <string name="event_end">Event End</string>
    <string name="event_title">Event Title</string>
    <string name="event_owner">Event Owner</string>
    <string name="event_quota_remain">Quota Remain</string>
    <string name="event_registrant">Event Registrant</string>
    <string name="event_quota">Event Quota</string>
    <string name="event_description">Event Description</string>
    <string name="register_event">Register</string>

    <string name="image_description">Event Image</string>
    <string name="bookmark_description">Bookmark Icon</string>
    <string name="divider_text">-</string>

    <string name="searchbar_hint">Cari Event</string>
    <string name="event_summary">Event Summary</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="notification_settings">Notification Settings</string>

    <string name="remaining_quota_text">Remaining Quota: %1$d</string>
</resources>