<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.eventdetail.EventDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_poster_event"
                android:layout_width="0dp"
                android:layout_height="250dp"
                android:contentDescription="@string/image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_event_detail_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/event_title"
                android:textColor="@color/purple_500"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_poster_event" />

            <TextView
                android:id="@+id/tv_event_detail_start"
                style="@style/event_information"
                android:text="@string/event_start"
                app:drawableStartCompat="@drawable/ic_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_detail_title" />

            <TextView
                android:id="@+id/tv_quota"
                style="@style/event_information"
                android:text="@string/event_quota"
                app:drawableStartCompat="@drawable/ic_quota"
                app:layout_constraintStart_toEndOf="@+id/tv_event_detail_start"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_detail_title" />

            <TextView
                android:id="@+id/tv_registrant"
                style="@style/event_information"
                android:text="@string/event_registrant"
                app:drawableStartCompat="@drawable/ic_verified_registrant"
                app:layout_constraintStart_toEndOf="@+id/tv_quota"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_detail_title" />

            <TextView
                android:id="@+id/tv_quota_remain"
                style="@style/event_information"
                android:text="@string/event_quota_remain"
                app:drawableStartCompat="@drawable/ic_registrant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_registrant" />

            <TextView
                android:id="@+id/tv_owner_name"
                style="@style/event_information"
                android:text="@string/event_owner"
                app:drawableStartCompat="@drawable/ic_business"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_quota_remain" />


            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/event_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_owner_name" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/register_event"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</FrameLayout>