<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingevents.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming_event"
        android:name="com.example.dicodingevents.ui.upcomingevents.UpcomingEventsFragment"
        android:label="@string/title_upcoming_event"
        tools:layout="@layout/fragment_upcoming_events" />

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="com.example.dicodingevents.ui.finishedevents.FinishedEventsFragment"
        android:label="@string/title_finished_event"
        tools:layout="@layout/fragment_finished_events" />
    <activity
        android:id="@+id/eventDetailActivity"
        android:name="com.example.dicodingevents.ui.eventdetail.EventDetailActivity"
        android:label="activity_event_detail"
        tools:layout="@layout/activity_event_detail" />
    <activity
        android:id="@+id/mainActivity2"
        android:name="com.example.dicodingevents.MainActivity"
        android:label="MainActivity" />
</navigation>